stateDiagram-v2
[*] --> Cancelled : Cancel
WaitingForDesignDoc --> WaitingForPPS : DesignDocDone
WaitingForPPS --> OrganizedForSending : Organize
OrganizedForSending --> InternalReviewed : InternalReviewApprove
InternalReviewed --> InReview : SendForReview
InReview --> ReviewApproved : ReviewApprove
InReview --> ReviewRejected : ReviewReject
InReview --> ReviewApprovedWithChanges : ReviewApproveWithChanges
ReviewApproved --> CustomerNotified : NotifyCustomer
ReviewRejected --> CustomerModifyingForRejection : NotifyCustomerOfRejection
CustomerModifyingForRejection --> OrganizedForSending : Organize
ReviewApprovedWithChanges --> CustomerNotified : NotifyCustomerOfChanges
